logging and exception completed

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -19,6 +19,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- create the source src folder and sub folders with __init__.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
